--- a/src/assets/admin/layout2/css/themes/custom-skin-main-content.css
+++ b/src/assets/admin/layout2/css/themes/custom-skin-main-content.css
@@ -107,7 +107,7 @@ h6 {
   background: var(--page-content) !important;
 }
 .form-control,
-.col-item {
+.col-item,.domain-field-text {
   color: var(---text-color) !important;
   background-color: var(--page-content) !important;
   border: 1px solid var(--border-color) !important;
@@ -193,7 +193,7 @@ ul.alt-row-style1 li:hover,
 .l-g-view,
 .campaign-email-template-filter-icon,
 .list__item.list__item--selected > .flex-row,
-.filter-button-color {
+.filter-button-color,.domain-btn {
   background-color: var(--div-bg-color) !important;
   border: 1px solid var(--border-color) !important;
   color: var(---text-color) !important;
@@ -2658,4 +2658,10 @@ markdown pre,.aligin-para{
 .submenu-toggle::after{
   border-right: 2px solid var(---text-color) !important;
   border-bottom: 2px solid var(---text-color) !important;
+}
+.dropdown-menu button.share-btn {
+  border: none !important;
+}
+.dropdown-menu button.share-btn:hover{
+  box-shadow: none !important;
 }
